<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fffcf5"
    tools:context=".SignupFragment">
    <ImageView
        android:id="@+id/background1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/subtitle2"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="-6dp"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/signup"
            android:textColor="#B8D8D8"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/logo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_above="@id/subtitle2"
            android:layout_marginBottom="-6dp"
            android:layout_toRightOf="@id/logo"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/signup2"
            android:textColor="#7A9E9F"
            android:textSize="60sp" />


        <TextView
            android:id="@+id/subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/name"
            android:layout_marginStart="25dp"

            android:layout_marginBottom="0dp"
            android:fontFamily="@font/amiko"
            android:text="@string/desc2"
            android:textColor="#4F6367"
            android:textSize="17sp" />

        <EditText
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="7sp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/email"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#4F6367"
            android:fontFamily="@font/amiko"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="3dp"
            android:textColor="#4F6367"
            android:textColorHint="#4F6367"
            android:textSize="17sp" />

        <EditText
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="7sp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/password"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#4F6367"
            android:fontFamily="@font/amiko"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="3dp"
            android:textColor="#4F6367"

            android:textColorHint="#4F6367"
            android:textSize="17sp" />

        <EditText
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="7sp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/repassword"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#4F6367"
            android:fontFamily="@font/amiko"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="3dp"
            android:textColor="#4F6367"

            android:textColorHint="#4F6367"
            android:textSize="17sp" />

        <EditText
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="7sp"
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/btn_signup"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#4F6367"
            android:fontFamily="@font/amiko"
            android:hint="@string/retypepassword"
            android:inputType="textPassword"
            android:padding="3dp"
            android:textColor="#4F6367"
            android:textColorHint="#4F6367"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fffcf5"
            android:layout_marginTop="10dp"
            android:text="@string/signup3"
            android:layout_centerInParent="true"
            android:backgroundTint="#4F6367"
            android:fontFamily="@font/amiko_semibold"
            android:padding="0dp"/>

        <TextView
            android:id="@+id/popup"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="31dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_text"
            android:fontFamily="@font/amiko_semibold"
            android:paddingLeft="5dp"
            android:paddingTop="6.5dp"
            android:paddingRight="13dp"
            android:paddingBottom="3.5dp"
            android:text="@string/swipeLeft"
            android:textColor="#4F6367"
            android:textSize="15sp"
            app:cornerRadius="40dp" />

    </RelativeLayout>

</RelativeLayout>