<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#fffcf5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/swap_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko_semibold"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="5dp"
            android:backgroundTint="#4F6367"
            android:textColor="#fffcf5"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko_bold"
            android:textSize="25dp"
            android:layout_marginBottom="-12dp"
            android:backgroundTint="#fffcf5"
            android:textColor="#B8D8D8"
            android:text="@string/swap_title_label" />

        <EditText
            android:id="@+id/swap_title2"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#4F6367"
            android:drawablePadding="7sp"
            android:textColorHint="#4F6367"
            android:backgroundTint="#4F6367"
            android:fontFamily="@font/amiko"
            android:textSize="17dp"
            android:drawableLeft="@drawable/ic_baseline_text_snippet_24"
            android:layout_height="wrap_content"
            android:hint="@string/swap_title" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swap_des_label"
            android:fontFamily="@font/amiko_bold"
            android:textSize="25dp"
            android:layout_marginBottom="-12dp"
            android:backgroundTint="#fffcf5"
            android:textColor="#B8D8D8"/>

        <EditText
            android:id="@+id/swap_des2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#4F6367"
            android:drawablePadding="7sp"
            android:textColorHint="#4F6367"
            android:fontFamily="@font/amiko"
            android:textSize="17dp"
            android:backgroundTint="#4F6367"
            android:drawableLeft="@drawable/ic_baseline_text_snippet_24"
            android:hint="@string/swap_des" />

        <Button
            android:id="@+id/pic2"
            android:text="Take Picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko_semibold"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="5dp"
            android:backgroundTint="#4F6367"
            android:textColor="#fffcf5"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/cancelID"
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko_semibold"
            android:padding="5dp"
android:layout_gravity="center_horizontal"
            app:cornerRadius="5dp"
            android:backgroundTint="#4F6367"
            android:textColor="#fffcf5"
            android:textSize="17sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/backId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amiko_semibold"
            android:padding="5dp"

            app:cornerRadius="5dp"
            android:backgroundTint="#4F6367"
            android:textColor="#fffcf5"
            android:textSize="17sp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>